error message spacing fixed

--- a/react_form/src/App.css
+++ b/react_form/src/App.css
@@ -33,6 +33,7 @@ body{
  span{
   color: #ff3a3a;
   font-size:12px;
+  margin-top:-10px;
 }
 
 
